--- a/client/templates/CSE/bar.html
+++ b/client/templates/CSE/bar.html
@@ -1,5 +1,3 @@
 <template name="CSE_bar">
-  <div class="CSE">
-  CSE {{percent}}%<paper-progress value="{{percent}}" max="100" min="0"></paper-progress> {{raw}}
-</div>
+CSE({{percent}}%)<paper-progress value="{{percent}}" max="100" min="0"></paper-progress>{{raw}}
 </template>
