--- a/client/templates/CSE/bar.css
+++ b/client/templates/CSE/bar.css
@@ -2,7 +2,7 @@
   color: #777777;
   text-align: center;
   font-size:.7em;
-  /*height:30px;*/
+  min-height: 16px;
   display: flex;
   align-items: center;
   width: 100%;
