--- a/client/cseplanning/cseplanning.css
+++ b/client/cseplanning/cseplanning.css
@@ -1,50 +1,63 @@
 .d3slider {
-  width:150px;
+  width:100%;
 }
 
 .d3-slider {
-  width:50px;
+  width:100%;
 }
 
 circle.dragger-outer{
-  fill:  rgb(253, 170, 248);
-  stroke: rgb(242, 126, 234);
-  stroke-width: 2px;
+  fill: rgb(242, 126, 234);
 }
 
 circle.dragger-inner {
-  fill: rgb(253, 170, 248);
-}
 
-circle.dragger-outer:hover{
   fill: rgb(242, 126, 234);
 }
 
-circle.dragger-inner:hover{
-  fill: rgb(242, 126, 234);
-}
-
-rect.d3slider-rect-range
-{
+rect.d3slider-rect-range {
   fill:#e0e0e0;
-  stroke:#777;
 }
 
-rect.d3slider-rect-value
-{
-  fill:#777;
+rect.d3slider-rect-value {
+  fill:#f27eea;
+}
+
+#cseplanning {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .slideflex {
-  display: flex; /* or inline-flex */
-  flex-direction: row;
-  display: -webkit-box;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
   display: flex;
   align-items: center;
+  flex-direction: column;
   justify-content: center;
+  width: 90%;
+  cursor: default;
+  min-height: 60px;
+}
+
+.slideflex .slider-top {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  color: #424242;
+  margin-bottom: 8px;
+  font-size: 14px;
+}
+
+.slider-top span {
+  font-weight: 300;
+}
+
+.slideflex .slider-top .value span {
+  color: #777777;
+}
+
+.slideflex .draggertext {
 }
 
 .slideflex > span {
@@ -60,11 +73,26 @@ rect.d3slider-rect-value
 }
 
 #slidetotal {
-  width: 150px;
-  justify-content: space-around;
-  text-align: center;
+  font-weight: 300;
+}
+
+#slidetotal span {
+  color: #777777;
+  font-weight: 400;
+  font-size: 16px;
+  margin-right: 0px;
 }
 
 .slidetotal {
+  display: flex;
+  flex-direction: row;
+  width: 90%;
+  justify-content: flex-end;
+  align-items: baseline;
+}
 
+.slidetotal span {
+  margin-right: 4px;
+  color: #777;
+  font-size: 12px;
 }
