--- a/client/body/body.css
+++ b/client/body/body.css
@@ -107,7 +107,7 @@ body {
   min-height: 67px;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: space-between;
   align-items: center;
   border-bottom: 1px dotted #ececec;
   padding: 8px;
