--- a/client/body/body.css
+++ b/client/body/body.css
@@ -66,11 +66,8 @@ body {
 }
 
 .flex-item {
-  width: 175px;
+  width: 95%;
   justify-content: space-around;
-  margin-top:10px;
-  margin-right:10px;
-  margin-left:10px;
   height:80px;
 }
 .flex-3columns{
@@ -113,6 +110,13 @@ body {
   padding: 8px;
   padding-top: 4px;
   cursor: default;
+}
+
+.flex-column .bottom {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .flex-column .top .fa {
