Added course class to failed courses

--- a/client/checkbox/checkbox.css
+++ b/client/checkbox/checkbox.css
@@ -1,8 +1,7 @@
-.checkbox
-{
+.checkbox {
   margin-left:auto;
   margin-right:auto;
-    margin-top: 20px;
+  margin-top: 20px;
   width:30px;
   height:30px;
   border: solid 1px #C4C4C4;
@@ -11,5 +10,5 @@
 
 .checkbox > i{
   font-size: 2.5em;
-    line-height: .4;
+  line-height: .4;
 }
