--- a/client/future/future.css
+++ b/client/future/future.css
@@ -1,5 +1,5 @@
 .profile{
-    margin-top: 50px;
+    margin: 10px;
     display: flex;
     flex-wrap: wrap;
 
@@ -13,7 +13,7 @@
 }
 
 .box {
-    background: blue;
+    /* background: blue; */
     width: 16px;
     height: 16px;
     position: relative;
@@ -22,5 +22,55 @@
     color: white;
     font-size: 24px;
     font-family: sans-serif;
-    margin: 5px;
-  }
+    margin-left: 5px;
+}
+
+.topstudentbox {
+    fill: green;
+    width: 8%;
+    height: 8%;
+
+}
+
+.middlestudentbox {
+    fill: orange;    
+    width: 8%;
+    height: 8%;
+}
+
+.lowstudentbox {
+    fill: red;    
+    width: 8%;
+    height: 8%;
+
+}
+
+.badstudentbox {
+    fill: black;    
+    width: 8%;
+    height: 8%;
+
+}
+
+.unknown {
+    fill: grey;    
+    width: 8%;
+    height: 8%;
+
+}
+.backgroundProfile {
+    width: 100%;
+    height: 100%;
+}
+
+.fields {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+
+}
+
+
