Fixed course card name

--- a/client/course/course.css
+++ b/client/course/course.css
@@ -3,7 +3,7 @@
   transform: scale(1.5);*/
   /*z-index: 1000;*/
   transition: all 0.4s ease;
-  box-shadow: 1px 1px 5px #a1a1a1;
+  /*box-shadow: 1px 1px 5px #a1a1a1;*/
 }
 
 .course {
@@ -44,13 +44,13 @@
   font-weight: 300;
   letter-spacing: 0px;
   line-height: 110%;
-  /* margin-left: 4px; */
-  /* margin-bottom: 2px; */
-  width: 100%;
+  margin-left: 4px;
+  margin-bottom: 2px;
   margin: 4px;
   min-height: 28px;
   color: #424242;
-  margin-bottom: 0;
+  display: flex;
+  align-items: center;
 }
 
 .course .label {
