--- a/client/course/course.css
+++ b/client/course/course.css
@@ -40,7 +40,7 @@
 }
 
 .course .name{
-  font-size: 12px;
+  font-size: 13px;
   font-weight: 300;
   letter-spacing: 0px;
   line-height: 110%;
@@ -88,6 +88,7 @@
   display: flex;
   justify-content: space-around;
   align-items: flex-end;
+  width: 100%;
 }
 
 .course .course-bottom .grade {
