--- a/client/future/future.css
+++ b/client/future/future.css
@@ -60,8 +60,9 @@
 
 }
 .backgroundProfile {
-    width: 100%;
-    height: 100%;
+    width: 95%;
+    height: 95%;
+    stroke-width: 2px;
 }
 
 .fields {
@@ -74,4 +75,7 @@
 
 }
 
+/* .best{
+    border: 2 solid black;
+} */
 
