--- a/client/course/course.css
+++ b/client/course/course.css
@@ -36,7 +36,7 @@
   justify-content: space-around;
   align-items: flex-end;
   width: 100%;
-  background: #f7f7f7;
+  position: relative;
 }
 
 .course .name{
@@ -47,7 +47,7 @@
   margin-left: 4px;
   margin-bottom: 2px;
   margin: 4px;
-  min-height: 28px;
+  min-height: 32px;
   color: #424242;
   display: flex;
   align-items: center;
