--- a/client/future/future.css
+++ b/client/future/future.css
@@ -31,26 +31,49 @@
     height: 8px;
 
 }
+.legend3 {
+    background-color: #b2dfdb;
+    width: 25%;
+    text-align: center;
+}
 
 .middlestudentbox {
     fill: #90caf9;    
     width: 8px;
     height: 8px;
 }
+.legend4 {
+    background-color: #90caf9;  
+    width: 25%;
+    text-align: center;
+    
+}
 
 .lowstudentbox {
-    fill: #9fa8da
-    ;    
+    fill: #9fa8da;    
     width: 8px;
     height: 8px;
 
 }
+.legend5 {
+    background-color: #9fa8da ;
+    width: 25%;
+    text-align: center;
+    
+}
+
 
 .badstudentbox {
     fill: #e1bee7;    
     width: 8px;
     height: 8px;
 
+}
+.legendnot {
+    background-color: #e1bee7;    
+    width: 25%;
+    text-align: center;
+    
 }
 
 .unknown {
@@ -66,14 +89,31 @@
 }
 
 .fields {
-    height: 100%;
+    height: 70%;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
     justify-content: space-evenly;
     align-items: center;
+    margin-top: 10;
 
 }
+
+
+.legend {
+    width: 95%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+    font-weight: 300;
+
+}
+
+
+
+
 
 /* .best{
     border: 2 solid black;
