--- a/client/course/course.css
+++ b/client/course/course.css
@@ -91,6 +91,8 @@
   max-height: 0px;
   overflow: hidden;
   transition: max-height 0.5s ease;
+  position: relative;
+  cursor: pointer;
 }
 
 .course .course-bottom .grade {
