--- a/client/future/future.css
+++ b/client/future/future.css
@@ -1,3 +1,15 @@
+:root{
+    --TopStudent:  rgba(166,97,26,0.5);
+    --TopSelected : #edf8fb;
+    --MiddleStudent: rgba(233,194,125,0.8);
+    --MiddleSelected: #7bccc4;
+    --LowStudent:   rgba(128,205,193,0.8);
+    --LowSelected: #43a2ca;
+    --BadStudent:   rgba(1,133,113,0.8);
+    --BadSelected: #084081; 
+}
+
+
 .profile{
     margin: 10px;
     display: flex;
@@ -13,7 +25,6 @@
 }
 
 .box {
-    /* background: blue; */
     width: 16px;
     height: 16px;
     position: relative;
@@ -27,34 +38,34 @@
 
 /* Students getting bachelor in 3 years */
 .topstudentbox {
-    fill: rgb(250, 204, 246);
+    fill: var(--TopStudent);    
     width: 8px;
     height: 8px;
 
 }
 
 .selected.topstudentbox {
-    fill: rgb(250, 204, 246);;
+    fill: var(--TopSelected); 
 }
 
 .legend3 {
-    background-color: rgb(250, 204, 246);
+    background-color: var(--TopStudent); 
     width: 25%;
     text-align: center;
 }
 
 /* Students getting bachelor in 4 years */
 .middlestudentbox {
-    fill: rgb(253, 170, 248);    
+    fill: var(--MiddleStudent);     
     width: 8px;
     height: 8px;
 }
 .selected.middlestudentbox {
-    fill: rgb(253, 170, 248);
+    fill: var(--MiddleSelected);   
 }
 
 .legend4 {
-    background-color: rgb(253, 170, 248);
+    background-color: var(--MiddleStudent);   
     width: 25%;
     text-align: center;
     
@@ -63,15 +74,15 @@
 
 /* Students getting bachelor in 5 years */
 .lowstudentbox {
-    fill: rgb(242, 126, 234);
+    fill: var(--LowStudent);   
     width: 8px;
     height: 8px;
 }
 .selected.lowstudentbox {
-    fill: rgb(242, 126, 234);
+    fill:var(--LowSelected); 
 }
 .legend5 {
-    background-color: rgb(242, 126, 234);
+    background-color: var(--LowStudent); 
     width: 25%;
     text-align: center;
     
@@ -79,16 +90,16 @@
 
 /* Students not getting bachelor */
 .badstudentbox {
-    fill: black;    
+    fill: var(--BadStudent);  
     width: 8px;
     height: 8px;
 
 }
 .selected.badstudentbox{
-    fill:grey;
+    fill:var(--BadSelected); 
 }
 .legendnot {
-    background-color:black;    
+    background-color:var(--BadStudent);   
     width: 25%;
     text-align: center;
     
