--- a/client/future/future.css
+++ b/client/future/future.css
@@ -1,12 +1,12 @@
 :root{
-    --TopStudent:  rgba(166,97,26,0.5);
-    --TopSelected : #edf8fb;
-    --MiddleStudent: rgba(233,194,125,0.8);
-    --MiddleSelected: #7bccc4;
-    --LowStudent:   rgba(128,205,193,0.8);
-    --LowSelected: #43a2ca;
-    --BadStudent:   rgba(1,133,113,0.8);
-    --BadSelected: #084081; 
+    --TopStudent:  rgba(165,214,167,1);
+    --TopSelected : rgb(125, 214, 129);
+    --MiddleStudent: rgba(128,222,234,1);
+    --MiddleSelected: rgb(83, 216, 232);
+    --LowStudent:   rgba(159,168,218,1);
+    --LowSelected: rgb(119, 133, 215);
+    --BadStudent:   rgba(255,193,227,1);
+    --BadSelected: rgb(246, 122, 190); 
 }
 
 
