added the basic elements

--- a/client/failedcourses/failedcourses.css
+++ b/client/failedcourses/failedcourses.css
@@ -4,3 +4,11 @@
 
 .bold {font-weight: 500;}
 .notbold {font-weight: 300;}
+
+.tolerate{
+  display: flex;
+}
+
+.toleranceredits{
+  display: flex;
+}
