--- a/client/cseplanning/cseplanning.css
+++ b/client/cseplanning/cseplanning.css
@@ -31,9 +31,10 @@ circle.dragger-inner:hover {
 }
 
 #cseplanning {
+  overflow: hidden;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
 }
 
