busy with tolerating

--- a/client/body/body.css
+++ b/client/body/body.css
@@ -225,6 +225,25 @@ body {
   text-align:center;
 
 }
+
+.tolerantiepunten {
+  color: #777777;
+  text-align: center;
+  font-size:.7em;
+  min-height: 16px;
+  display: flex;
+  align-items: baseline;
+  width: 100%;
+  justify-content: space-between;
+}
+
+paper-progress {
+  border: 0 !important;
+}
+
+paper-progress #primaryProgress {
+  background: #81a8b8 !important;
+}
 /* 
 .colhistory {
   border: 0px;
