--- a/client/failedcourses/failedcourses.css
+++ b/client/failedcourses/failedcourses.css
@@ -45,7 +45,7 @@
 .check-fail{
   width: 32px;
   height: 16px; 
-  background-color: #eabd79;
+  background-color: #ffcc80;
   align-self: flex-start;
   text-align: center;
   color: white;
