--- a/client/course/course.css
+++ b/client/course/course.css
@@ -27,6 +27,8 @@
   justify-content: flex-start;
   color: #818181;
   align-items: baseline;
+  cursor: pointer;
+  position: relative;
 }
 
 .course .course-top .top-bar {
