--- a/client/failedcourses/failedcourses.css
+++ b/client/failedcourses/failedcourses.css
@@ -6,9 +6,9 @@
   justify-content: flex-start;
 }
 
-.course-bottom.tolerate.tolerable.canTolerate {
+/* .course-bottom.tolerate.tolerable.canTolerate {
   max-height: 48px;
-}
+} */
 
 .bold {font-weight: 500;}
 .notbold {font-weight: 300;}
