--- a/client/cseplanning/cseplanning.css
+++ b/client/cseplanning/cseplanning.css
@@ -20,8 +20,12 @@ circle.dragger-outer.default{
   fill: #81A8B8;
 }
 
-circle.dragger-outer.yearOne, circle.dragger-outer.yearTwo, circle.dragger-outer.yearThree{
+circle.dragger-outer.yearOne, circle.dragger-outer.yearTwo, circle.dragger-outer.yearTwoa, circle.dragger-outer.yearTwob, circle.dragger-outer.yearThree{
   fill: var(--TopStudent);
+}
+
+circle.dragger-outer.yearTwo{
+  display: none;
 }
 
 circle.dragger-outer.yearFour{
@@ -36,8 +40,12 @@ circle.dragger-outer.yearFive{
 circle.dragger-inner.default {
   fill: #81A8B8;
 }
-circle.dragger-inner.yearOne, circle.dragger-inner.yearTwo, circle.dragger-inner.yearThree {
+circle.dragger-inner.yearOne, circle.dragger-inner.yearTwo, circle.dragger-inner.yearTwoa, circle.dragger-inner.yearTwob ,circle.dragger-inner.yearThree {
   fill: var(--TopStudent);
+}
+
+circle.dragger-inner.yearTwo{
+  display: none;
 }
 
 circle.dragger-inner.yearFour {
@@ -47,12 +55,13 @@ circle.dragger-inner.yearFour {
 circle.dragger-inner.yearFive {
   fill: var(--LowStudent);
 }
+
 /* slider background */
 rect[class^=d3slider-rect-range] {
   fill:#e0e0e0;
 }
 /* slider value */
-rect.d3slider-rect-value.yearOne, rect.d3slider-rect-value.yearTwo, rect.d3slider-rect-value.yearThree {
+rect.d3slider-rect-value.yearOne, rect.d3slider-rect-value.yearTwo, rect.d3slider-rect-value.yearTwoa, rect.d3slider-rect-value.yearTwob, rect.d3slider-rect-value.yearThree {
   fill: var(--TopStudent);
 }
 
@@ -64,7 +73,7 @@ rect.d3slider-rect-value.yearFive {
   fill: var(--LowStudent);
 }
 /* dragger-outer hover */
-circle.dragger-outer.yearOne:hover, circle.dragger-outer.yearTwo:hover, circle.dragger-outer.yearThree:hover{
+circle.dragger-outer.yearOne:hover, circle.dragger-outer.yearTwo:hover, circle.dragger-outer.yearTwoa:hover, circle.dragger-outer.yearTwob:hover, circle.dragger-outer.yearThree:hover{
   fill: var(--TopSelected);
 }
 
@@ -81,7 +90,7 @@ circle.dragger-inner.default:hover {
   fill: #537988;
 }
 
-circle.dragger-inner.yearOne:hover, circle.dragger-inner.yearTwo:hover, circle.dragger-inner.yearThree:hover{
+circle.dragger-inner.yearOne:hover, circle.dragger-inner.yearTwo:hover, circle.dragger-inner.yearTwoa:hover, circle.dragger-inner.yearTwob:hover, circle.dragger-inner.yearThree:hover{
   fill: var(--TopSelected);
 }
 
